Fix: Table headers and body horizontal scrolling alignment

--- a/packages/core/app/styles/navi-core/visualizations/table.less
+++ b/packages/core/app/styles/navi-core/visualizations/table.less
@@ -38,7 +38,10 @@
     .display-flex;
     .flex-1;
     .flex-flow-column;
-    overflow-y: auto;
+
+    &--vc {
+      overflow-y: auto;
+    }
   }
 
   .table-widget__horizontal-scroll-container {
